# cellmap-data

./: .buildinfo  .cruft.json  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  CUDA_STREAM_IMPROVEMENTS.md  CUDA_STREAM_OPTIMIZATION.md  FRAMEWORK_COMPATIBILITY_COMPLETE.md  LICENSE  MANIFEST.in  MEMORY_LEAK_FIX.md  MEMORY_OPTIMIZATION_COMPLETION.md  OPTIMIZATION_SUMMARY.md  P0_CRITICAL_ISSUES_BREAKDOWN.md  P0_FIXES_COMPLETION_REPORT.md  PACKAGE_IMPROVEMENT_PLAN.md  PERFORMANCE_TESTS_INTEGRATION.md  PHASE1_EXECUTION_PLAN.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_REFACTOR_PLAN.md  PLANNING_OVERVIEW.md  PRIORITY_3_COMPLETE.md  PRIORITY_4_COMPLETE.md  PROGRESS_SUMMARY.md  PROJECT_README.md  README.md  WEEK1_REVIEW_AND_POSTMORTEM.md  WEEK3_DAY1_2_LOGGING_SUMMARY.md  WEEK3_EXCEPTION_INTEGRATION_SUMMARY.md  cellmap_data.CellMapDataLoader.html  cellmap_data.CellMapDataSplit.html  cellmap_data.CellMapDataset.html  cellmap_data.CellMapImage.html  cellmap_data.CellMapMultiDataset.html  cellmap_data.CellMapSubset.html  cellmap_data.dataloader.html  (+45 more)
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: auto-date-tag.yml  auto-pep440-date-tag.yml  black.yml  ci.yml  docs.yml  jekyll-gh-pages.yml  mypy.yml  python-publish.yml  release-notes.yml  release.yml  tests.yml
PLANNING/: CONSOLIDATED_PLANNING_UPDATE.md  DOCUMENTATION_INDEX.md  MASTER_PLAN.md  P0_CRITICAL_ISSUES_BREAKDOWN.md  P0_FIXES_COMPLETION_REPORT.md  PARAMETER_MIGRATION_SUMMARY.md  PHASE1_EXECUTION_PLAN.md  PLANNING_CONSOLIDATION_COMPLETE.md  PLANNING_CONSOLIDATION_INDEX.md  README.md  REFACTORING_PROJECT_PROPOSAL.md  REFACTOR_PROJECT_PROPOSAL.md  REPOSITORY_CLEANUP_SUMMARY.md  TECHNICAL_DEBT_AUDIT.md  TEST_COVERAGE_ANALYSIS.md  WEEK1_POSTMORTEM.md  WEEK2_COMPLETE_SUMMARY.md  WEEK2_DAY1_PROGRESS.md  WEEK2_PHASE1_COMPLETION_SUMMARY.md  WEEK2_ROBUSTNESS_COMPLETION_SUMMARY.md  WEEK4_COMPLETION_SUMMARY.md  WEEK4_DAY3-4_DOCSTRING_STANDARDS.md  WEEK4_PREPARATION_CONSOLIDATED.md  WEEK5_COMPLETION_STATUS.md  WEEK5_COORDINATE_OPTIMIZATION_COMPLETE.md  WEEK5_DAY5_THREAD_SAFETY_COMPLETION.md  WEEK5_PERFORMANCE_OPTIMIZATION_PLAN.md  WEEK5_PHASE_INITIATION.md  WEEK6_DAY1-2_ARCHITECTURE_PLAN.md
_modules/: index.html
_modules/cellmap_data/: dataloader.html  dataset.html  dataset_writer.html  datasplit.html  image.html  multidataset.html  subdataset.html
_sources/: cellmap_data.CellMapDataLoader.rst  cellmap_data.CellMapDataSplit.rst  cellmap_data.CellMapDataset.rst  cellmap_data.CellMapImage.rst  cellmap_data.CellMapMultiDataset.rst  cellmap_data.CellMapSubset.rst  cellmap_data.dataloader.rst  cellmap_data.dataset_writer.rst  cellmap_data.image.rst  cellmap_data.multidataset.rst  cellmap_data.rst  cellmap_data.subdataset.rst  cellmap_data.transforms.augment.binarize.rst  cellmap_data.transforms.augment.gaussian_blur.rst  cellmap_data.transforms.augment.gaussian_noise.rst  cellmap_data.transforms.augment.random_contrast.rst  cellmap_data.transforms.augment.rst  cellmap_data.transforms.rst  cellmap_data.transforms.targets.cellpose.rst  cellmap_data.transforms.targets.rst  cellmap_data.utils.coordinate.rst  cellmap_data.utils.figs.rst  cellmap_data.utils.metadata.rst  cellmap_data.utils.roi.rst  cellmap_data.utils.rst  data_loader.rst  index.rst  modules.rst
docs/: DATALOADER_OPTIMIZATION.md  performance_verification.md
docs/source/: cellmap_data.CellMapDataLoader.rst  cellmap_data.CellMapDataset.rst  cellmap_data.CellMapImage.rst  cellmap_data.CellMapMultiDataset.rst  cellmap_data.dataset.rst  cellmap_data.datasplit.rst  cellmap_data.rst  cellmap_data.transforms.augment.nan_to_num.rst  cellmap_data.transforms.augment.normalize.rst  cellmap_data.transforms.augment.random_gamma.rst  cellmap_data.transforms.rst  cellmap_data.transforms.targets.distance.rst  cellmap_data.utils.dtype.rst  cellmap_data.utils.figs.rst  cellmap_data.utils.rst  conf.py  index.rst
examples/: simple_train.py
scripts/: README.md  cleanup_repo.py
src/cellmap_data/: __init__.py  base_dataset.py  base_image.py  cli.py  data_split_config_manager.py  dataloader.py  dataset.py  dataset_factory.py  dataset_writer.py  datasplit.py  empty_image.py  enhanced_dataloader.py  exceptions.py  framework.py  image.py  image_writer.py  imageloaders.py  io.py  logging.py  (+8 more)
tests/: README.md  conftest.py  demo_memory_fix.py  invalid_dataset_config.json  test_api_contract.py  test_base_classes.py  test_cellmap_data.py  test_cellmap_dataset.py  test_cellmap_image.py  test_class_relationships_migration.py  test_coordinate_cache_optimization.py  test_core_modules.py  test_coverage_improvements.py  test_dataloader.py  test_dataset.py  test_dataset_coverage_gaps.py  test_dataset_edge_cases.py  test_dataset_writer.py  test_dataset_writer_batch.py  test_dataset_writer_coverage_gaps.py  test_dataset_writer_coverage_gaps_fixed.py  test_dataset_writer_gpu.py  test_dataset_writer_parameter_migration.py  test_datasplit.py  test_datasplit_refactor.py  test_empty_image.py  test_empty_image_writer.py  test_enhanced_thread_safety_integration.py  test_error_handling.py  test_essential_coverage_gaps.py  test_framework_compatibility.py  test_framework_compatibility_simplified.py  test_framework_integration_e2e.py  test_geometry.py  test_get_indices_methods.py  test_gpu_transfer.py  test_helpers.py  test_image.py  test_image_classes.py  test_image_edge_cases.py  (+29 more)
(+60 files in other folders)
